Include a link to GitHub

--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
                   </div>
                 </li>
               </ul>
+              <p class="signature">
+                <a href="https://github.com/olexandracodes/weather-app"
+                  >Open-source code</a
+                >
+                by Olexandra Kunytska
+              </p>
             </div>
           </div>
 
